# fast-gpt-lab

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  setup.ps1
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: bench.yml  ci.yml
benchmarks/: benchmark_suite.py  compare_throughput.py  run_bench.py  run_profiler.py  run_sweeps.py
configs/: gpt2_small.yaml
deploy/: api.py  continuous_batching.py  quant_fp8.py  tui.py
docs/: ADR-001-flash-attention.md  ADR-002-swiglu.md  ADR-003-uv-package-manager.md  ADR-005-rope.md  ADR-006-kv-cache.md  ADR-007-quantization.md  ADR-008-telemetry.md  ADR-009-streaming-datasets.md  ADR-010-multi-node.md  ADR-011-mfu-tracking.md  ADR-012-trace-visualization.md  ADR-013-tensor-core-alignment.md  ADR-014-benchmarking-standards.md  ADR-015-fastapi-streaming.md  CONTRIBUTING.md
eval/: __init__.py  hellaswag.py  perplexity.py  test_bpe.py
eval/tests/: test_api.py  test_data_stream.py  test_mfu.py  test_optim.py  test_sharder.py  test_tensor_cores.py
infra/: Dockerfile
profiling/: __init__.py  chrome_trace.py  chrome_trace_analyzer.py  flop_calculator.py  memory_auditor.py  mfu.py  trace_export.py
src/: __init__.py
src/kernels/: __init__.py  flash_attention.py  flash_attn_bwd.py  fp8_utils.py  (+5 more)
theoretical_foundations/: bpe_math.md  flash_attention_math.md  math_rigor.md  swiglu_math.md
training/: __init__.py  amp_scaler.py  checkpoint.py  cluster_orchestrator.py  ddp.py  fsdp.py  grad_checkpoint.py  optim_utils.py  telemetry.py
(+11 files in other folders)
